--- a/index.html
+++ b/index.html
@@ -7,60 +7,43 @@
     <title>TechBindu - প্রযুক্তির শুরু এখান থেকেই</title>
     <style>
         body {
-            font-family: 'Segoe UI', sans-serif;
             margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #222;
-        }
-        header {
-            background-color: #0e7c7b;
-            color: white;
+            font-family: 'Segoe UI', sans-serif;
+            background: #f9f9f9;
+            color: #333;
             text-align: center;
-            padding: 20px 10px;
+            padding: 50px 20px;
         }
         img.logo {
-            max-width: 150px;
-            margin: 20px auto;
-            display: block;
+            max-width: 300px;
+            margin-bottom: 20px;
         }
-        section {
-            padding: 20px;
-            max-width: 800px;
-            margin: auto;
+        h1 {
+            font-size: 2em;
+            margin-bottom: 10px;
         }
-        h2 {
-            color: #0e7c7b;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background-color: #eee;
-            margin-top: 40px;
+        p {
+            font-size: 1.2em;
+            margin-bottom: 20px;
         }
         a {
-            color: #0e7c7b;
             text-decoration: none;
+            color: #ffffff;
+            background-color: #28a745;
+            padding: 12px 20px;
+            border-radius: 5px;
+        }
+        a:hover {
+            background-color: #218838;
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>techbindu</h1>
-        <p><a href="https://facebook.com/TechBindu">ফেসবুক পেজ দেখুন</a></p>
-    </header>
     <img src="logo.jpeg" alt="TechBindu Logo" class="logo">
-    <section>
-        <h2>About Us</h2>
-        <p>টেকবিন্দু — প্রযুক্তির শুরু এখান থেকেই।</p>
-        <p>আমরা বিশ্বাস করি, প্রযুক্তি হোক সবার নাগালে, সাশ্রয়ী দামে এবং নির্ভরযোগ্য মানে।</p>
-        <p>এখানে আপনি পাবেন সব ধরনের মোবাইল এক্সেসরিজ ও ইলেকট্রনিক্স পণ্য —
-        🎧 হেডফোন, 🔌 চার্জার, 📱 কেসিং, 📡 ক্যাবল, 🔊 স্পিকার, 🕹️ গ্যাজেট — আরও অনেক কিছু!</p>
-        <p>অনলাইনে অর্ডার করুন, ঘরে বসে ডেলিভারি নিন — সহজ, দ্রুত, নির্ভরযোগ্য।</p>
-        <p><strong>টেকবিন্দু</strong> — যেখান থেকে প্রযুক্তির যাত্রা শুরু হয় আপনার হাত ধরে।</p>
-    </section>
-    <footer>
-        <p>&copy; 2025 TechBindu. All rights reserved.</p>
-    </footer>
+    <h1>TechBindu</h1>
+    <p>Easy Shopping. Fast Solution.</p>
+    <p>প্রযুক্তির শুরু এখান থেকেই।</p>
+    <p><strong>🚧 আমাদের ওয়েবসাইট নির্মাণাধীন। শীঘ্রই আসছে...</strong></p>
+    <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" target="_blank">আমাদের Facebook পেজে যান</a>
 </body>
 </html>
