--- a/index.html
+++ b/index.html
@@ -5,45 +5,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechBindu - প্রযুক্তির শুরু এখান থেকেই</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap">
     <style>
         body {
             margin: 0;
-            font-family: 'Segoe UI', sans-serif;
-            background: #f9f9f9;
-            color: #333;
+            font-family: 'Hind Siliguri', sans-serif;
+            background-color: #f7f7f7;
             text-align: center;
-            padding: 50px 20px;
+            color: #333;
         }
-        img.logo {
+        header {
+            background-color: #ffffff;
+            padding: 20px;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        header img {
             max-width: 300px;
-            margin-bottom: 20px;
         }
-        h1 {
-            font-size: 2em;
-            margin-bottom: 10px;
+        .banner img {
+            width: 100%;
+            max-height: 300px;
+            object-fit: cover;
         }
-        p {
-            font-size: 1.2em;
+        .about {
+            padding: 30px 20px;
+            background: #fff;
+            margin: 20px auto;
+            max-width: 800px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0,0,0,0.05);
+        }
+        .about h2 {
             margin-bottom: 20px;
+            color: #0a8a0a;
+        }
+        footer {
+            background-color: #e0f0e0;
+            padding: 20px;
+            font-size: 14px;
+            color: #444;
         }
         a {
+            color: #0a8a0a;
             text-decoration: none;
-            color: #ffffff;
-            background-color: #28a745;
-            padding: 12px 20px;
-            border-radius: 5px;
-        }
-        a:hover {
-            background-color: #218838;
         }
     </style>
 </head>
 <body>
-    <img src="logo.jpeg" alt="TechBindu Logo" class="logo">
-    <h1>TechBindu</h1>
-    <p>Easy Shopping. Fast Solution.</p>
-    <p>প্রযুক্তির শুরু এখান থেকেই।</p>
-    <p><strong>🚧 আমাদের ওয়েবসাইট নির্মাণাধীন। শীঘ্রই আসছে...</strong></p>
-    <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" target="_blank">আমাদের Facebook পেজে যান</a>
+
+    <header>
+        <img src="logo.jpeg" alt="TechBindu Logo">
+        <h1>TechBindu</h1>
+        <p>প্রযুক্তির শুরু এখান থেকেই 😊❤️</p>
+    
+    <div style="background-color: #fff3cd; color: #856404; padding: 10px; font-weight: bold;">
+        🔧 ওয়েবসাইটের কাজ এখনো নির্মাণাধীন। আমরা শীঘ্রই সম্পূর্ণরূপে চালু হবো!
+    </div>
+    </header>
+    
+
+    <div class="banner">
+        <img src="cover.jpeg" alt="Cover Image">
+    </div>
+
+    <section class="about">
+        <h2>About Us</h2>
+        <p>আমরা বিশ্বাস করি, প্রযুক্তি হোক সবার নাগালে, সাশ্রয়ী দামে এবং নির্ভরযোগ্য মানে।</p>
+        <p>এখানে আপনি পাবেন সব ধরনের মোবাইল এক্সেসরিজ ও ইলেকট্রনিক্স পণ্য — 🎧 হেডফোন, 🔌 চার্জার, 📱 কেসিং, 📡 ক্যাবল, 🔊 স্পিকার, 🕹️ গ্যাজেট — আরও অনেক কিছু!</p>
+        <p>অনলাইনে অর্ডার করুন, ঘরে বসে ডেলিভারি নিন — সহজ, দ্রুত, নির্ভরযোগ্য।</p>
+        <p><strong>টেকবিন্দু — যেখান থেকে প্রযুক্তির যাত্রা শুরু হয় আপনার হাত ধরে।🌸❤️</strong></p>
+    </section>
+
+    <footer>
+        📧 Email: <a href="mailto:techbindugadget@gmail.com">techbindugadget@gmail.com</a><br>
+        📘 Facebook: <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" target="_blank">TechBindu Page</a><br>
+        &copy; 2025 TechBindu. All rights reserved.
+    </footer>
+
 </body>
 </html>
