--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="bn">
 <head>
@@ -58,9 +57,9 @@
         <h1>TechBindu</h1>
         <p>প্রযুক্তির শুরু এখান থেকেই 😊❤️</p>
     
-    <div style="background-color: #fff3cd; color: #856404; padding: 10px; font-weight: bold;">
-        🔧 ওয়েবসাইটের কাজ এখনো নির্মাণাধীন। আমরা শীঘ্রই সম্পূর্ণরূপে চালু হবো!
-    </div>
+        <div style="background-color: #fff3cd; color: #856404; padding: 10px; font-weight: bold;">
+            🔧 ওয়েবসাইটের কাজ এখনো নির্মাণাধীন। আমরা শীঘ্রই সম্পূর্ণরূপে চালু হবো!
+        </div>
     </header>
     
 
@@ -79,6 +78,8 @@
     <footer>
         📧 Email: <a href="mailto:techbindugadget@gmail.com">techbindugadget@gmail.com</a><br>
         📘 Facebook: <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" target="_blank">TechBindu Page</a><br>
+        📸 Instagram: <a href="https://www.instagram.com/techbindu/" target="_blank">instagram.com/techbindu</a><br>
+        🎥 TikTok: <a href="https://www.tiktok.com/@techbindugadget?_r=1&_d=secCgYIASAHKAESPgo8vf%2Bz9P8OhCwAadY9pOmuX6GWHD7c61A3UNmhAxg4vL4kfwHm0rhbx6LZNqfcC%2FHWMdG5sNVic2z%2BuCxJGgA%3D&_svg=1&checksum=4d410db14d26a2a1fd7726a6a5a72e9b2abad784e9217a52c4ca206b76ebb350&sec_uid=MS4wLjABAAAA8ep8tchnsehRuR_VnHYeyp18IqWaQRpKGMOUQDu9piI3SbejnMhQXjeNK0glwR68&sec_user_id=MS4wLjABAAAA8ep8tchnsehRuR_VnHYeyp18IqWaQRpKGMOUQDu9piI3SbejnMhQXjeNK0glwR68&share_app_id=1233&share_author_id=7509149134265009160&share_link_id=BCF4C4BE-5323-4566-8A14-92061DE1511C&share_scene=1&sharer_language=en&social_share_type=4&source=h5_m&timestamp=1748361325&tt_from=copy&u_code=ekf17hjagd7idc&ug_btm=b8727%2Cb0&user_id=7509149134265009160&utm_campaign=client_share&utm_medium=ios&utm_source=copy" target="_blank">tiktok.com/@techbindugadget</a><br>
         &copy; 2025 TechBindu. All rights reserved.
     </footer>
 
