--- a/index.html
+++ b/index.html
@@ -26,17 +26,29 @@
             max-height: 300px;
             object-fit: cover;
         }
-        .about {
+        .about, .products {
             padding: 30px 20px;
             background: #fff;
             margin: 20px auto;
-            max-width: 800px;
+            max-width: 900px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0,0,0,0.05);
         }
-        .about h2 {
+        .about h2, .products h2 {
             margin-bottom: 20px;
             color: #0a8a0a;
+        }
+        .product {
+            margin: 20px auto;
+            padding: 20px;
+            background: #fdfdfd;
+            border: 1px solid #e0e0e0;
+            border-radius: 8px;
+        }
+        .product img {
+            max-width: 100%;
+            height: auto;
+            border-radius: 5px;
         }
         footer {
             background-color: #e0f0e0;
@@ -56,12 +68,12 @@
         <img src="logo.jpeg" alt="TechBindu Logo">
         <h1>TechBindu</h1>
         <p>প্রযুক্তির শুরু এখান থেকেই 😊❤️</p>
-    
+
         <div style="background-color: #fff3cd; color: #856404; padding: 10px; font-weight: bold;">
             🔧 ওয়েবসাইটের কাজ এখনো নির্মাণাধীন। আমরা শীঘ্রই সম্পূর্ণরূপে চালু হবো!
         </div>
     </header>
-    
+
 
     <div class="banner">
         <img src="cover.jpeg" alt="Cover Image">
@@ -75,11 +87,38 @@
         <p><strong>টেকবিন্দু — যেখান থেকে প্রযুক্তির যাত্রা শুরু হয় আপনার হাত ধরে।🌸❤️</strong></p>
     </section>
 
+    <section class="products">
+        <h2>📦 আমাদের পণ্যসমূহ</h2>
+        <div class="product">
+            <img src="images/apple_20w_adapter.jpeg" alt="Apple 20W Power Adapter">
+            <h3>Apple 20W USB-C Power Adapter</h3>
+            <p>মূল্য: ৳2599 মাত্র</p>
+            <ul style="text-align: left; display: inline-block;">
+                <li>🔋 Fast Charging | Optimal Performance</li>
+                <li>📱 iPhone, iPad, AirPods ও Apple Watch এর জন্য উপযোগী</li>
+                <li>🔌 USB-C Interface, 3-Pin Plug</li>
+                <li>❌ Cable অন্তর্ভুক্ত না</li>
+                <li>✅ Trusted Apple Quality | Limited Stock</li>
+            </ul>
+        </div>
+        <div class="product">
+            <img src="images/usb_c_to_lightning.jpeg" alt="Apple USB-C to Lightning Cable">
+            <h3>Apple USB-C to Lightning Cable (2m)</h3>
+            <p>মূল্য: ৳499 মাত্র</p>
+            <ul style="text-align: left; display: inline-block;">
+                <li>✅ iPhone ও iPad এর সাথে সামঞ্জস্যপূর্ণ</li>
+                <li>⚡ Super Fast Data Sync</li>
+                <li>🧵 Durable ও Long-lasting</li>
+                <li>✅ স্টক সীমিত, দেরি না করে অর্ডার করুন আজই!</li>
+            </ul>
+        </div>
+    </section>
+
     <footer>
         📧 Email: <a href="mailto:techbindugadget@gmail.com">techbindugadget@gmail.com</a><br>
         📘 Facebook: <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" target="_blank">TechBindu Page</a><br>
         📸 Instagram: <a href="https://www.instagram.com/techbindu/" target="_blank">instagram.com/techbindu</a><br>
-        🎥 TikTok: <a href="https://www.tiktok.com/@techbindugadget?_r=1&_d=secCgYIASAHKAESPgo8vf%2Bz9P8OhCwAadY9pOmuX6GWHD7c61A3UNmhAxg4vL4kfwHm0rhbx6LZNqfcC%2FHWMdG5sNVic2z%2BuCxJGgA%3D&_svg=1&checksum=4d410db14d26a2a1fd7726a6a5a72e9b2abad784e9217a52c4ca206b76ebb350&sec_uid=MS4wLjABAAAA8ep8tchnsehRuR_VnHYeyp18IqWaQRpKGMOUQDu9piI3SbejnMhQXjeNK0glwR68&sec_user_id=MS4wLjABAAAA8ep8tchnsehRuR_VnHYeyp18IqWaQRpKGMOUQDu9piI3SbejnMhQXjeNK0glwR68&share_app_id=1233&share_author_id=7509149134265009160&share_link_id=BCF4C4BE-5323-4566-8A14-92061DE1511C&share_scene=1&sharer_language=en&social_share_type=4&source=h5_m&timestamp=1748361325&tt_from=copy&u_code=ekf17hjagd7idc&ug_btm=b8727%2Cb0&user_id=7509149134265009160&utm_campaign=client_share&utm_medium=ios&utm_source=copy" target="_blank">tiktok.com/@techbindugadget</a><br>
+        🎥 TikTok: <a href="https://www.tiktok.com/@techbindugadget" target="_blank">tiktok.com/@techbindugadget</a><br>
         &copy; 2025 TechBindu. All rights reserved.
     </footer>
 
