--- a/index.html
+++ b/index.html
@@ -1,126 +1,165 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechBindu - প্রযুক্তির শুরু এখান থেকেই</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap">
-    <style>
-        body {
-            margin: 0;
-            font-family: 'Hind Siliguri', sans-serif;
-            background-color: #f7f7f7;
-            text-align: center;
-            color: #333;
-        }
-        header {
-            background-color: #ffffff;
-            padding: 20px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        header img {
-            max-width: 300px;
-        }
-        .banner img {
-            width: 100%;
-            max-height: 300px;
-            object-fit: cover;
-        }
-        .about, .products {
-            padding: 30px 20px;
-            background: #fff;
-            margin: 20px auto;
-            max-width: 900px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.05);
-        }
-        .about h2, .products h2 {
-            margin-bottom: 20px;
-            color: #0a8a0a;
-        }
-        .product {
-            margin: 20px auto;
-            padding: 20px;
-            background: #fdfdfd;
-            border: 1px solid #e0e0e0;
-            border-radius: 8px;
-        }
-        .product img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 5px;
-        }
-        footer {
-            background-color: #e0f0e0;
-            padding: 20px;
-            font-size: 14px;
-            color: #444;
-        }
-        a {
-            color: #0a8a0a;
-            text-decoration: none;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TechBindu - প্রযুক্তির শুরু এখান থেকেই</title>
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Hind Siliguri', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    header {
+      background-color: #ffffff;
+      padding: 20px;
+      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    header img {
+      max-width: 200px;
+    }
+    .banner img {
+      width: 100%;
+      max-height: 300px;
+      object-fit: cover;
+    }
+    h2.section-title {
+      margin: 40px 0 20px;
+      color: #0a8a0a;
+      text-align: center;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 20px;
+      padding: 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .product-card {
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+      padding: 15px;
+      transition: transform 0.2s;
+    }
+    .product-card:hover {
+      transform: translateY(-5px);
+    }
+    .product-card img {
+      max-width: 100%;
+      border-radius: 6px;
+    }
+    .product-card h3 {
+      margin: 10px 0 5px;
+      font-size: 18px;
+      color: #0a8a0a;
+    }
+    .product-card p {
+      font-size: 15px;
+    }
+    .product-card ul {
+      list-style: none;
+      text-align: left;
+      margin: 10px 0;
+    }
+    .product-card ul li {
+      margin-bottom: 5px;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 8px 16px;
+      background: #0a8a0a;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 14px;
+    }
+    .about {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+    }
+    footer {
+      background: #e0f0e0;
+      padding: 20px;
+      text-align: center;
+      font-size: 14px;
+    }
+    footer a {
+      color: #0a8a0a;
+      text-decoration: none;
+    }
+  </style>
 </head>
 <body>
 
-    <header>
-        <img src="logo.jpeg" alt="TechBindu Logo">
-        <h1>TechBindu</h1>
-        <p>প্রযুক্তির শুরু এখান থেকেই 😊❤️</p>
+  <header>
+    <img src="logo.jpeg" alt="TechBindu Logo">
+    <h1>TechBindu</h1>
+    <p>প্রযুক্তির শুরু এখান থেকেই 😊❤️</p>
+  </header>
 
-        <div style="background-color: #fff3cd; color: #856404; padding: 10px; font-weight: bold;">
-            🔧 ওয়েবসাইটের কাজ এখনো নির্মাণাধীন। আমরা শীঘ্রই সম্পূর্ণরূপে চালু হবো!
-        </div>
-    </header>
+  <div class="banner">
+    <img src="cover.jpeg" alt="Cover">
+  </div>
 
-
-    <div class="banner">
-        <img src="cover.jpeg" alt="Cover Image">
+  <h2 class="section-title">📦 আমাদের পণ্যসমূহ</h2>
+  <section class="products">
+    <div class="product-card">
+      <img src="images/apple_20w_adapter.jpeg" alt="Apple Adapter">
+      <h3>Apple 20W USB-C Power Adapter</h3>
+      <p>মূল্য: ৳2599 মাত্র</p>
+      <ul>
+        <li>🔋 Fast Charging | Optimal Performance</li>
+        <li>📱 iPhone, iPad, AirPods ও Apple Watch এর জন্য উপযোগী</li>
+        <li>🔌 USB-C Interface, 3-Pin Plug</li>
+        <li>❌ Cable অন্তর্ভুক্ত না</li>
+        <li>✅ Trusted Apple Quality</li>
+      </ul>
+      <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
     </div>
 
-    <section class="about">
-        <h2>About Us</h2>
-        <p>আমরা বিশ্বাস করি, প্রযুক্তি হোক সবার নাগালে, সাশ্রয়ী দামে এবং নির্ভরযোগ্য মানে।</p>
-        <p>এখানে আপনি পাবেন সব ধরনের মোবাইল এক্সেসরিজ ও ইলেকট্রনিক্স পণ্য — 🎧 হেডফোন, 🔌 চার্জার, 📱 কেসিং, 📡 ক্যাবল, 🔊 স্পিকার, 🕹️ গ্যাজেট — আরও অনেক কিছু!</p>
-        <p>অনলাইনে অর্ডার করুন, ঘরে বসে ডেলিভারি নিন — সহজ, দ্রুত, নির্ভরযোগ্য।</p>
-        <p><strong>টেকবিন্দু — যেখান থেকে প্রযুক্তির যাত্রা শুরু হয় আপনার হাত ধরে।🌸❤️</strong></p>
-    </section>
+    <div class="product-card">
+      <img src="images/usb_c_to_lightning.jpeg" alt="Apple Cable">
+      <h3>Apple USB-C to Lightning Cable (2m)</h3>
+      <p>মূল্য: ৳499 মাত্র</p>
+      <ul>
+        <li>✅ iPhone ও iPad এর সাথে সামঞ্জস্যপূর্ণ</li>
+        <li>⚡ Super Fast Data Sync</li>
+        <li>🧵 Durable ও Long-lasting</li>
+        <li>✅ স্টক সীমিত!</li>
+      </ul>
+      <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+    </div>
+  </section>
 
-    <section class="products">
-        <h2>📦 আমাদের পণ্যসমূহ</h2>
-        <div class="product">
-            <img src="images/apple_20w_adapter.jpeg" alt="Apple 20W Power Adapter">
-            <h3>Apple 20W USB-C Power Adapter</h3>
-            <p>মূল্য: ৳2599 মাত্র</p>
-            <ul style="text-align: left; display: inline-block;">
-                <li>🔋 Fast Charging | Optimal Performance</li>
-                <li>📱 iPhone, iPad, AirPods ও Apple Watch এর জন্য উপযোগী</li>
-                <li>🔌 USB-C Interface, 3-Pin Plug</li>
-                <li>❌ Cable অন্তর্ভুক্ত না</li>
-                <li>✅ Trusted Apple Quality | Limited Stock</li>
-            </ul>
-        </div>
-        <div class="product">
-            <img src="images/usb_c_to_lightning.jpeg" alt="Apple USB-C to Lightning Cable">
-            <h3>Apple USB-C to Lightning Cable (2m)</h3>
-            <p>মূল্য: ৳499 মাত্র</p>
-            <ul style="text-align: left; display: inline-block;">
-                <li>✅ iPhone ও iPad এর সাথে সামঞ্জস্যপূর্ণ</li>
-                <li>⚡ Super Fast Data Sync</li>
-                <li>🧵 Durable ও Long-lasting</li>
-                <li>✅ স্টক সীমিত, দেরি না করে অর্ডার করুন আজই!</li>
-            </ul>
-        </div>
-    </section>
+  <section class="about">
+    <h2>About Us</h2>
+    <p>আমরা বিশ্বাস করি, প্রযুক্তি হোক সবার নাগালে, সাশ্রয়ী দামে এবং নির্ভরযোগ্য মানে।</p>
+    <p>এখানে আপনি পাবেন সব ধরনের মোবাইল এক্সেসরিজ ও ইলেকট্রনিক্স পণ্য — 🎧 হেডফোন, 🔌 চার্জার, 📱 কেসিং, 📡 ক্যাবল, 🔊 স্পিকার, 🕹️ গ্যাজেট — আরও অনেক কিছু!</p>
+    <p>অনলাইনে অর্ডার করুন, ঘরে বসে ডেলিভারি নিন — সহজ, দ্রুত, নির্ভরযোগ্য।</p>
+    <p><strong>টেকবিন্দু — যেখান থেকে প্রযুক্তির যাত্রা শুরু হয় আপনার হাত ধরে।🌸❤️</strong></p>
+  </section>
 
-    <footer>
-        📧 Email: <a href="mailto:techbindugadget@gmail.com">techbindugadget@gmail.com</a><br>
-        📘 Facebook: <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" target="_blank">TechBindu Page</a><br>
-        📸 Instagram: <a href="https://www.instagram.com/techbindu/" target="_blank">instagram.com/techbindu</a><br>
-        🎥 TikTok: <a href="https://www.tiktok.com/@techbindugadget" target="_blank">tiktok.com/@techbindugadget</a><br>
-        &copy; 2025 TechBindu. All rights reserved.
-    </footer>
+  <footer>
+    📧 Email: <a href="mailto:techbindugadget@gmail.com">techbindugadget@gmail.com</a><br>
+    📘 Facebook: <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" target="_blank">TechBindu Page</a><br>
+    📸 Instagram: <a href="https://www.instagram.com/techbindu/" target="_blank">instagram.com/techbindu</a><br>
+    🎥 TikTok: <a href="https://www.tiktok.com/@techbindugadget" target="_blank">tiktok.com/@techbindugadget</a><br>
+    &copy; 2025 TechBindu. All rights reserved.
+  </footer>
 
 </body>
 </html>
