--- a/index.html
+++ b/index.html
@@ -6,105 +6,27 @@
   <title>TechBindu - প্রযুক্তির শুরু এখান থেকেই</title>
   <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap" rel="stylesheet">
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-    body {
-      font-family: 'Hind Siliguri', sans-serif;
-      background-color: #f9f9f9;
-      color: #333;
-    }
-    header {
-      background-color: #ffffff;
-      padding: 20px;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-    header img {
-      max-width: 200px;
-    }
-    .banner img {
-      width: 100%;
-      max-height: 300px;
-      object-fit: cover;
-    }
-    h2.section-title {
-      margin: 40px 0 20px;
-      color: #0a8a0a;
-      text-align: center;
-    }
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-      padding: 20px;
-      max-width: 1200px;
-      margin: 0 auto;
-    }
-    .product-card {
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-      padding: 15px;
-      transition: transform 0.2s;
-    }
-    .product-card:hover {
-      transform: translateY(-5px);
-    }
-    .product-card img {
-      max-width: 100%;
-      border-radius: 6px;
-    }
-    .product-card h3 {
-      margin: 10px 0 5px;
-      font-size: 18px;
-      color: #0a8a0a;
-    }
-    .product-card p {
-      font-size: 15px;
-    }
-    .product-card ul {
-      list-style: none;
-      text-align: left;
-      margin: 10px 0;
-    }
-    .product-card ul li {
-      margin-bottom: 5px;
-    }
-    .btn {
-      display: inline-block;
-      margin-top: 10px;
-      padding: 8px 16px;
-      background: #0a8a0a;
-      color: white;
-      text-decoration: none;
-      border-radius: 5px;
-      font-size: 14px;
-    }
-    .about {
-      max-width: 900px;
-      margin: 40px auto;
-      background: #fff;
-      padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.05);
-    }
-    footer {
-      background: #e0f0e0;
-      padding: 20px;
-      text-align: center;
-      font-size: 14px;
-    }
-    footer a {
-      color: #0a8a0a;
-      text-decoration: none;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
+    body { font-family: 'Hind Siliguri', sans-serif; background-color: #f9f9f9; color: #333; }
+    header { background-color: #ffffff; padding: 20px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+    header img { max-width: 200px; }
+    .banner img { width: 100%; max-height: 300px; object-fit: cover; }
+    h2.section-title { margin: 40px 0 20px; color: #0a8a0a; text-align: center; }
+    .products { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; padding: 20px; max-width: 1200px; margin: 0 auto; }
+    .product-card { background: #fff; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.05); padding: 15px; transition: transform 0.2s; }
+    .product-card:hover { transform: translateY(-5px); }
+    .product-card img { max-width: 100%; border-radius: 6px; }
+    .product-card h3 { margin: 10px 0 5px; font-size: 18px; color: #0a8a0a; }
+    .product-card p { font-size: 15px; }
+    .product-card ul { list-style: none; text-align: left; margin: 10px 0; }
+    .product-card ul li { margin-bottom: 5px; }
+    .btn { display: inline-block; margin-top: 10px; padding: 8px 16px; background: #0a8a0a; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; }
+    .about { max-width: 900px; margin: 40px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05); }
+    footer { background: #e0f0e0; padding: 20px; text-align: center; font-size: 14px; }
+    footer a { color: #0a8a0a; text-decoration: none; }
   </style>
 </head>
 <body>
-
   <header>
     <img src="logo.jpeg" alt="TechBindu Logo">
     <h1>TechBindu</h1>
@@ -143,6 +65,48 @@
       </ul>
       <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
     </div>
+
+    <div class="product-card">
+      <img src="images/samsung_25w_adapter.jpeg" alt="Samsung Charger">
+      <h3>Samsung Super Fast Charger 25W PD Adapter</h3>
+      <p>মূল্য: ৳1299 মাত্র</p>
+      <ul>
+        <li>⚡ Super Fast Charging Support</li>
+        <li>🔌 USB-C PD (Power Delivery)</li>
+        <li>🔥 Overheat Protection</li>
+        <li>📱 Samsung ফোনের জন্য উপযোগী</li>
+        <li>✅ Trusted Original Quality</li>
+      </ul>
+      <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+    </div>
+
+    <div class="product-card">
+      <img src="images/m10_wireless_earbuds.jpeg" alt="M10 Earbuds">
+      <h3>M10 TWS Wireless Earbuds</h3>
+      <p>মূল্য: ৳649 মাত্র</p>
+      <ul>
+        <li>🔋 2500mAh Charging Box (Power Bank হিসেবেও ব্যবহারযোগ্য)</li>
+        <li>🎧 HD Stereo Sound & Noise Reduction</li>
+        <li>💧 Waterproof & Sweatproof Design</li>
+        <li>🔗 সব ডিভাইসের সাথে Bluetooth Compatible</li>
+        <li>✅ স্টাইলিশ ও সাশ্রয়ী</li>
+      </ul>
+      <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+    </div>
+
+    <div class="product-card">
+      <img src="images/stainless_steel_flask.jpeg" alt="Smart Flask">
+      <h3>Smart LED Temperature Flask</h3>
+      <p>মূল্য: ৳599 মাত্র</p>
+      <ul>
+        <li>🌡️ LED Touch Temperature Display</li>
+        <li>🔥 12-24 ঘন্টা গরম/ঠান্ডা রাখে</li>
+        <li>🧊 Double Wall Stainless Steel</li>
+        <li>🚫 BPA-Free এবং Leakproof</li>
+        <li>✅ স্টাইলিশ ও টেকসই</li>
+      </ul>
+      <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+    </div>
   </section>
 
   <section class="about">
@@ -160,6 +124,5 @@
     🎥 TikTok: <a href="https://www.tiktok.com/@techbindugadget" target="_blank">tiktok.com/@techbindugadget</a><br>
     &copy; 2025 TechBindu. All rights reserved.
   </footer>
-
 </body>
 </html>
