--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>TechBindu - প্রযুক্তির শুরু এখান থেকেই</title>
-  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap" rel="stylesheet" />
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body { font-family: 'Hind Siliguri', sans-serif; background-color: #f9f9f9; color: #333; }
@@ -18,7 +18,7 @@
     .product-card img { max-width: 100%; border-radius: 6px; }
     .product-card h3 { margin: 10px 0 5px; font-size: 18px; color: #0a8a0a; }
     .product-card p { font-size: 15px; }
-    .product-card ul { list-style: none; text-align: left; margin: 10px 0; }
+    .product-card ul { list-style: none; text-align: left; margin: 10px 0; padding-left: 0; }
     .product-card ul li { margin-bottom: 5px; }
     .btn { display: inline-block; margin-top: 10px; padding: 8px 16px; background: #0a8a0a; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; }
     .about { max-width: 900px; margin: 40px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05); }
@@ -27,6 +27,7 @@
   </style>
 </head>
 <body>
+
   <header>
     <img src="logo.jpeg" alt="TechBindu Logo">
     <h1>TechBindu</h1>
@@ -39,6 +40,8 @@
 
   <h2 class="section-title">📦 আমাদের পণ্যসমূহ</h2>
   <section class="products">
+
+    <!-- Product 1 -->
     <div class="product-card">
       <img src="images/apple_20w_adapter.jpeg" alt="Apple Adapter">
       <h3>Apple 20W USB-C Power Adapter</h3>
@@ -53,6 +56,7 @@
       <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
     </div>
 
+    <!-- Product 2 -->
     <div class="product-card">
       <img src="images/usb_c_to_lightning.jpeg" alt="Apple Cable">
       <h3>Apple USB-C to Lightning Cable (2m)</h3>
@@ -66,6 +70,7 @@
       <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
     </div>
 
+    <!-- Product 3 -->
     <div class="product-card">
       <img src="images/samsung_25w_adapter.jpeg" alt="Samsung Charger">
       <h3>Samsung Super Fast Charger 25W PD Adapter</h3>
@@ -80,6 +85,7 @@
       <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
     </div>
 
+    <!-- Product 4 -->
     <div class="product-card">
       <img src="images/m10_wireless_earbuds.jpeg" alt="M10 Earbuds">
       <h3>M10 TWS Wireless Earbuds</h3>
@@ -94,6 +100,7 @@
       <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
     </div>
 
+    <!-- Product 5 -->
     <div class="product-card">
       <img src="images/stainless_steel_flask.jpeg" alt="Smart Flask">
       <h3>Smart LED Temperature Flask</h3>
@@ -107,6 +114,51 @@
       </ul>
       <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
     </div>
+
+    <!-- Product 6 -->
+    <div class="product-card">
+      <img src="images/prodact_6.jpeg" alt="Awei Y887">
+      <h3>Awei Y887 Portable Bluetooth Speaker</h3>
+      <p>মূল্য: ৳3699 মাত্র</p>
+      <ul>
+        <li>✅ Super Bass & Clear Sound</li>
+        <li>✅ Portable & Stylish Design</li>
+        <li>✅ Bluetooth 5.0 Compatible</li>
+        <li>✅ Long Battery Backup</li>
+        <li>✅ FM, USB, AUX Supported</li>
+      </ul>
+      <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+    </div>
+
+    <!-- Product 7 -->
+    <div class="product-card">
+      <img src="images/prodact_7.jpeg" alt="Awei P5K">
+      <h3>Awei P5K 10000 mAh Power Bank</h3>
+      <p>মূল্য: ৳999 মাত্র</p>
+      <ul>
+        <li>✅ Dual USB Output</li>
+        <li>✅ Compact & Lightweight</li>
+        <li>✅ Safe & Fast Charging</li>
+        <li>✅ LED Indicator </li>
+        <li>✅ Best Seller!</li>
+      </ul>
+      <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+    </div>
+
+    <!-- Product 8 -->
+    <div class="product-card">
+      <img src="images/prodact_8.jpeg" alt="T800 Ultra">
+      <h3>T800 Ultra smart watch </h3>
+      <p>মূল্য: ৳850 মাত্র</p>
+      <ul>
+        <li>🌬️ Heart Rate Sensor</li>
+        <li>🔋 Wireless Charging </li>
+        <li>🌈 Available in Multiple Colors</li>
+        <li>✅ Waterproof Design</li>
+      </ul>
+      <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+    </div>
+
   </section>
 
   <section class="about">
@@ -124,5 +176,6 @@
     🎥 TikTok: <a href="https://www.tiktok.com/@techbindugadget" target="_blank">tiktok.com/@techbindugadget</a><br>
     &copy; 2025 TechBindu. All rights reserved.
   </footer>
+
 </body>
 </html>
