--- a/index.html
+++ b/index.html
@@ -159,6 +159,49 @@
       <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
     </div>
 
+<!-- Product 9 -->
+<div class="product-card">
+  <img src="images/prodact_9.jpeg" alt="Ultrapods Pro">
+  <h3>Ultrapods Pro True Wireless Earbuds</h3>
+  <p>মূল্য: ৳550 মাত্র</p>
+  <ul>
+    <li>🎧 Super Clear HD Sound</li>
+    <li>✅ Water Resistant (IPX4)</li>
+    <li>✅ LED Battery Display</li>
+    <li>✅ Touch Control & Built-in Microphone</li>
+  </ul>
+  <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+</div>
+
+<!-- Product 10 -->
+<div class="product-card">
+  <img src="images/prodact_10.jpeg" alt="VDENMENV DP43">
+  <h3>VDENMENV DP43 – 10000mAh Power Bank</h3>
+  <p>মূল্য: ৳1399 মাত্র</p>
+  <ul>
+    <li>⚡ 22.5W PD + QC 3.0 Fast Charging</li>
+    <li>✅ Digital Display</li>
+    <li>✅ Type-C + USB Output</li>
+    <li>✅ Slim, Stylish & Portable</li> 
+    <li>✅ Budget Friendly</li>
+  </ul>
+  <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+</div>
+
+<!-- Product 11 -->
+<div class="product-card">
+  <img src="images/prodact_11.jpeg" alt="CasePro Rugged">
+  <h3>CasePro Rugged Armor Back Cover</h3>
+  <p>মূল্য: ৳350 মাত্র</p>
+  <ul>
+    <li>📱 Shockproof 3-Part Design</li>
+    <li>🧲 Camera Protection</li>
+    <li>✨ Slim & Elegant Finish</li>
+    <li>✅ Multiple Color Options</li>
+  </ul>
+  <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+</div>
+
   </section>
 
   <section class="about">
