--- a/index.html
+++ b/index.html
@@ -1,82 +1,236 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TechBindu - প্রযুক্তির শুরু এখান থেকেই</title>
-  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri&display=swap" rel="stylesheet">
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
-    body { font-family: 'Hind Siliguri', sans-serif; background-color: #f9f9f9; color: #333; }
-    header { background-color: #ffffff; padding: 20px; text-align: center; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
-    header img { max-width: 200px; }
-    .navbar { display: flex; justify-content: space-between; align-items: center; padding: 10px 20px; background: #0a8a0a; }
-    .navbar h1 { color: #fff; margin: 0; }
-    .search-box { display: flex; align-items: center; }
-    .search-box input { padding: 8px; border: none; border-radius: 5px; width: 200px; }
-    .search-box button { padding: 8px; background: #fff; border: none; border-radius: 5px; cursor: pointer; margin-left: 5px; }
-    .banner img { width: 100%; max-height: 300px; object-fit: cover; }
-    h2.section-title { margin: 40px 0 20px; color: #0a8a0a; text-align: center; }
-    .products { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; padding: 20px; max-width: 1200px; margin: 0 auto; }
-    .product-card { background: #fff; border-radius: 8px; box-shadow: 0 2px 8px rgba(0,0,0,0.05); padding: 15px; transition: transform 0.2s; }
-    .product-card:hover { transform: translateY(-5px); }
-    .product-card img { max-width: 100%; border-radius: 6px; }
-    .product-card h3 { margin: 10px 0 5px; font-size: 18px; color: #0a8a0a; }
-    .product-card p { font-size: 15px; }
-    .btn { display: inline-block; margin-top: 10px; padding: 8px 16px; background: #0a8a0a; color: white; text-decoration: none; border-radius: 5px; font-size: 14px; }
-    .about { max-width: 900px; margin: 40px auto; background: #fff; padding: 30px; border-radius: 8px; box-shadow: 0 0 10px rgba(0,0,0,0.05); }
-    footer { background: #e0f0e0; padding: 20px; text-align: center; font-size: 14px; }
-    footer a { color: #0a8a0a; text-decoration: none; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Hind Siliguri', sans-serif;
+      background-color: #f9f9f9;
+      color: #333;
+      position: relative; /* For watermark positioning */
+    }
+    body::before { /* Watermark effect */
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-image: url('for website.jpg'); /* First image as watermark */
+      background-repeat: no-repeat;
+      background-position: center center;
+      background-size: cover;
+      opacity: 0.05; /* Adjust opacity for watermark effect */
+      z-index: -1; /* Send to back */
+    }
+    header {
+      background-color: #ffffff;
+      padding: 15px 20px;
+      display: flex;
+      align-items: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    header .logo {
+      max-width: 150px; /* Adjust logo size */
+      margin-right: 20px;
+    }
+    header .header-content {
+      flex-grow: 1;
+      text-align: left;
+    }
+    header h1 {
+      font-size: 28px;
+      color: #0a8a0a;
+      margin-bottom: 5px;
+    }
+    header p {
+      font-size: 16px;
+      color: #555;
+    }
+    .hero-section {
+      text-align: center;
+      padding: 60px 20px;
+      background-color: rgba(255, 255, 255, 0.7); /* Semi-transparent background over watermark */
+      margin-bottom: 30px;
+    }
+    .hero-section h2 {
+      font-size: 36px;
+      color: #0a8a0a;
+      margin-bottom: 15px;
+    }
+    .hero-section p {
+      font-size: 18px;
+      color: #666;
+      max-width: 700px;
+      margin: 0 auto;
+    }
+    h2.section-title {
+      margin: 40px 0 20px;
+      color: #0a8a0a;
+      text-align: center;
+      font-size: 30px;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 30px; /* Increased gap for better spacing */
+      padding: 20px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+    .product-card {
+      background: #fff;
+      border-radius: 10px; /* Slightly more rounded corners */
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08); /* Stronger shadow */
+      padding: 20px;
+      transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+      text-align: center; /* Center content within card */
+    }
+    .product-card:hover {
+      transform: translateY(-8px); /* More pronounced lift */
+      box-shadow: 0 8px 20px rgba(0,0,0,0.12); /* Stronger shadow on hover */
+    }
+    .product-card img {
+      max-width: 100%;
+      height: 200px; /* Fixed height for product images */
+      object-fit: contain; /* Ensure image fits without cropping */
+      border-radius: 8px;
+      margin-bottom: 15px;
+    }
+    .product-card h3 {
+      margin: 10px 0 8px;
+      font-size: 20px;
+      color: #0a8a0a;
+    }
+    .product-card .price {
+      font-size: 18px;
+      color: #e65c00; /* Distinct color for price */
+      font-weight: bold;
+      margin-bottom: 10px;
+    }
+    .product-card ul {
+      list-style: none;
+      text-align: left;
+      margin: 15px 0 20px;
+      padding-left: 0;
+    }
+    .product-card ul li {
+      margin-bottom: 8px;
+      font-size: 15px;
+      color: #555;
+      position: relative;
+      padding-left: 20px;
+    }
+    .product-card ul li::before {
+      content: '✓'; /* Checkmark icon */
+      color: #0a8a0a;
+      position: absolute;
+      left: 0;
+    }
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 25px;
+      background: #0a8a0a;
+      color: white;
+      text-decoration: none;
+      border-radius: 6px;
+      font-size: 16px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+    }
+    .btn:hover {
+      background-color: #086d08;
+    }
+    .about {
+      max-width: 900px;
+      margin: 60px auto;
+      background: #fff;
+      padding: 40px;
+      border-radius: 8px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.07);
+      text-align: center;
+    }
+    .about h2 {
+      font-size: 30px;
+      color: #0a8a0a;
+      margin-bottom: 20px;
+    }
+    .about p {
+      font-size: 17px;
+      line-height: 1.8;
+      margin-bottom: 15px;
+      color: #444;
+    }
+    footer {
+      background: #e0f0e0;
+      padding: 30px;
+      text-align: center;
+      font-size: 15px;
+      color: #555;
+      margin-top: 50px;
+    }
+    footer a {
+      color: #0a8a0a;
+      text-decoration: none;
+      margin: 0 5px;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
 
   <header>
-    <img src="logo.jpeg" alt="TechBindu Logo">
-    <h1>TechBindu</h1>
-    <p>প্রযুক্তির শুরু এখান থেকেই 😊❤️</p>
+    <img src="new logo for techbindu black.jpg" alt="TechBindu Logo" class="logo">
+    <div class="header-content">
+      <h1>TechBindu</h1>
+      <p>প্রযুক্তির শুরু এখান থেকেই 😊❤️</p>
+    </div>
   </header>
 
-  <div class="navbar">
-    <h1>TechBindu</h1>
-    <div class="search-box">
-      <input type="text" id="searchInput" placeholder="পণ্য খুঁজুন..." />
-      <button>🔍</button>
-    </div>
-  </div>
-
-  <div class="banner">
-    <img src="cover.jpeg" alt="Cover">
+  <div class="hero-section">
+    <h2>আপনার প্রযুক্তির প্রতিটি প্রয়োজন পূরণ হোক এক ক্লিকেই!</h2>
+    <p>আমরা আপনাকে দিচ্ছি সর্বোচ্চ মানের ইলেকট্রনিক্স ও মোবাইল এক্সেসরিজ, আপনার দোরগোড়ায়। সহজ শপিং, দ্রুত ডেলিভারি, নির্ভরযোগ্য পণ্য।</p>
   </div>
 
   <h2 class="section-title">📦 আমাদের পণ্যসমূহ</h2>
   <section class="products">
-    <!-- All your product cards remain unchanged with 'data-name' attributes for search functionality -->
-    
-    <div class="product-card" data-name="Apple 20W USB-C Power Adapter">
+    <div class="product-card">
       <img src="images/apple_20w_adapter.jpeg" alt="Apple Adapter">
       <h3>Apple 20W USB-C Power Adapter</h3>
-      <p>মূল্য: ৳2599 মাত্র</p>
+      <p class="price">মূল্য: ৳2599 মাত্র</p>
       <ul>
-        <li>🔋 Fast Charging | Optimal Performance</li>
-        <li>📱 iPhone, iPad, AirPods ও Apple Watch এর জন্য উপযোগী</li>
-        <li>🔌 USB-C Interface, 3-Pin Plug</li>
-        <li>❌ Cable অন্তর্ভুক্ত না</li>
-        <li>✅ Trusted Apple Quality</li>
+        <li>Fast Charging | Optimal Performance</li>
+        <li>iPhone, iPad, AirPods ও Apple Watch এর জন্য উপযোগী</li>
+        <li>USB-C Interface, 3-Pin Plug</li>
+        <li>Cable অন্তর্ভুক্ত না</li>
+        <li>Trusted Apple Quality</li>
       </ul>
       <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
     </div>
 
-   <!-- Product 2 -->
     <div class="product-card">
       <img src="images/usb_c_to_lightning.jpeg" alt="Apple Cable">
       <h3>Apple USB-C to Lightning Cable (2m)</h3>
-      <p>মূল্য: ৳499 মাত্র</p>
+      <p class="price">মূল্য: ৳499 মাত্র</p>
       <ul>
-        <li>✅ iPhone ও iPad এর সাথে সামঞ্জস্যপূর্ণ</li>
-        <li>⚡ Super Fast Data Sync</li>
-        <li>🧵 Durable ও Long-lasting</li>
-        <li>✅ স্টক সীমিত!</li>
+        <li>iPhone ও iPad এর সাথে সামঞ্জস্যপূর্ণ</li>
+        <li>Super Fast Data Sync</li>
+        <li>Durable ও Long-lasting</li>
+        <li>স্টক সীমিত!</li>
       </ul>
       <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
     </div>
@@ -85,7 +239,7 @@
     <div class="product-card">
       <img src="images/samsung_25w_adapter.jpeg" alt="Samsung Charger">
       <h3>Samsung Super Fast Charger 25W PD Adapter</h3>
-      <p>মূল্য: ৳1299 মাত্র</p>
+      <p class="price">মূল্য: ৳1299 মাত্র</p>
       <ul>
         <li>⚡ Super Fast Charging Support</li>
         <li>🔌 USB-C PD (Power Delivery)</li>
@@ -100,7 +254,7 @@
     <div class="product-card">
       <img src="images/m10_wireless_earbuds.jpeg" alt="M10 Earbuds">
       <h3>M10 TWS Wireless Earbuds</h3>
-      <p>মূল্য: ৳649 মাত্র</p>
+      <p class="price">মূল্য: ৳649 মাত্র</p>
       <ul>
         <li>🔋 2500mAh Charging Box (Power Bank হিসেবেও ব্যবহারযোগ্য)</li>
         <li>🎧 HD Stereo Sound & Noise Reduction</li>
@@ -115,7 +269,7 @@
     <div class="product-card">
       <img src="images/stainless_steel_flask.jpeg" alt="Smart Flask">
       <h3>Smart LED Temperature Flask</h3>
-      <p>মূল্য: ৳599 মাত্র</p>
+      <p class="price">মূল্য: ৳599 মাত্র</p>
       <ul>
         <li>🌡️ LED Touch Temperature Display</li>
         <li>🔥 12-24 ঘন্টা গরম/ঠান্ডা রাখে</li>
@@ -130,7 +284,7 @@
     <div class="product-card">
       <img src="images/prodact_6.jpeg" alt="Awei Y887">
       <h3>Awei Y887 Portable Bluetooth Speaker</h3>
-      <p>মূল্য: ৳3699 মাত্র</p>
+      <p class="price">মূল্য: ৳3699 মাত্র</p>
       <ul>
         <li>✅ Super Bass & Clear Sound</li>
         <li>✅ Portable & Stylish Design</li>
@@ -145,7 +299,7 @@
     <div class="product-card">
       <img src="images/prodact_7.jpeg" alt="Awei P5K">
       <h3>Awei P5K 10000 mAh Power Bank</h3>
-      <p>মূল্য: ৳999 মাত্র</p>
+      <p class="price">মূল্য: ৳999 মাত্র</p>
       <ul>
         <li>✅ Dual USB Output</li>
         <li>✅ Compact & Lightweight</li>
@@ -160,7 +314,7 @@
     <div class="product-card">
       <img src="images/prodact_8.jpeg" alt="T800 Ultra">
       <h3>T800 Ultra smart watch </h3>
-      <p>মূল্য: ৳850 মাত্র</p>
+      <p class="price">মূল্য: ৳850 মাত্র</p>
       <ul>
         <li>🌬️ Heart Rate Sensor</li>
         <li>🔋 Wireless Charging </li>
@@ -174,7 +328,7 @@
 <div class="product-card">
   <img src="images/prodact_9.jpeg" alt="Ultrapods Pro">
   <h3>Ultrapods Pro True Wireless Earbuds</h3>
-  <p>মূল্য: ৳550 মাত্র</p>
+  <p class="price">মূল্য: ৳550 মাত্র</p>
   <ul>
     <li>🎧 Super Clear HD Sound</li>
     <li>✅ Water Resistant (IPX4)</li>
@@ -188,7 +342,7 @@
 <div class="product-card">
   <img src="images/prodact_10.jpeg" alt="VDENMENV DP43">
   <h3>VDENMENV DP43 – 10000mAh Power Bank</h3>
-  <p>মূল্য: ৳1399 মাত্র</p>
+  <p class="price">মূল্য: ৳1399 মাত্র</p>
   <ul>
     <li>⚡ 22.5W PD + QC 3.0 Fast Charging</li>
     <li>✅ Digital Display</li>
@@ -203,53 +357,34 @@
 <div class="product-card">
   <img src="images/prodact_11.jpeg" alt="CasePro Rugged">
   <h3>CasePro Rugged Armor Back Cover</h3>
-  <p>মূল্য: ৳350 মাত্র</p>
+  <p class="price">মূল্য: ৳350 মাত্র</p>
   <ul>
     <li>📱 Shockproof 3-Part Design</li>
     <li>🧲 Camera Protection</li>
     <li>✨ Slim & Elegant Finish</li>
     <li>✅ Multiple Color Options</li>
   </ul>
-  <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
+ <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" class="btn" target="_blank">অর্ডার করুন</a>
 </div>
-
 
 
   </section>
 
- <section class="about">
-    <h2>About Us</h2>
+  <section class="about">
+    <h2>আমাদের সম্পর্কে</h2>
     <p>আমরা বিশ্বাস করি, প্রযুক্তি হোক সবার নাগালে, সাশ্রয়ী দামে এবং নির্ভরযোগ্য মানে।</p>
-    <p>এখানে আপনি পাবেন সব ধরনের মোবাইল এক্সেসরিজ ও ইলেকট্রনিক্স পণ্য !</p>
+    <p>এখানে আপনি পাবেন সব ধরনের মোবাইল এক্সেসরিজ ও ইলেকট্রনিক্স পণ্য — 🎧 হেডফোন, 🔌 চার্জার, 📱 কেসিং, 📡 ক্যাবল, 🔊 স্পিকার, 🕹️ গ্যাজেট — আরও অনেক কিছু!</p>
     <p>অনলাইনে অর্ডার করুন, ঘরে বসে ডেলিভারি নিন — সহজ, দ্রুত, নির্ভরযোগ্য।</p>
     <p><strong>টেকবিন্দু — যেখান থেকে প্রযুক্তির যাত্রা শুরু হয় আপনার হাত ধরে।🌸❤️</strong></p>
   </section>
 
-
   <footer>
-    📧 Email: <a href="mailto:techbindugadget@gmail.com">techbindugadget@gmail.com</a><br>
-    📘 Facebook: <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" target="_blank">TechBindu Page</a><br>
-    📸 Instagram: <a href="https://www.instagram.com/techbindu/" target="_blank">instagram.com/techbindu</a><br>
-    🎥 TikTok: <a href="https://www.tiktok.com/@techbindugadget" target="_blank">tiktok.com/@techbindugadget</a><br>
-    &copy; 2025 TechBindu. All rights reserved.
+    <p>📧 Email: <a href="mailto:techbindugadget@gmail.com">techbindugadget@gmail.com</a></p>
+    <p>📘 Facebook: <a href="https://www.facebook.com/share/19WAjNVe92/?mibextid=wwXIfr" target="_blank">TechBindu Page</a></p>
+    <p>📸 Instagram: <a href="https://www.instagram.com/techbindu/" target="_blank">instagram.com/techbindu</a></p>
+    <p>🎥 TikTok: <a href="https://www.tiktok.com/@techbindugadget" target="_blank">tiktok.com/@techbindugadget</a></p>
+    <p>&copy; 2025 TechBindu. All rights reserved.</p>
   </footer>
-
-  <!-- JavaScript for Search Functionality -->
-  <script>
-    document.getElementById("searchInput").addEventListener("keyup", function() {
-      let filter = this.value.toLowerCase();
-      let products = document.querySelectorAll(".product-card");
-
-      products.forEach(product => {
-        let name = product.getAttribute("data-name").toLowerCase();
-        if (name.includes(filter)) {
-          product.style.display = "block";
-        } else {
-          product.style.display = "none";
-        }
-      });
-    });
-  </script>
 
 </body>
 </html>
